--- a/src/components/code/algorithm/al-theory/pages/elem-algorithm.html
+++ b/src/components/code/algorithm/al-theory/pages/elem-algorithm.html
@@ -4,8 +4,8 @@
 <!-- Содержание -->
 <article class="article">
   <h2>Содержание</h2>
-  
-  <p><a href="#links">Links</a></p>
+
+  <p><a href="#links">links</a></p>
   <p><a href="#props">Свойства алгоритмов</a></p>
   <p><a href="#alg">Какой алгоритм выбрать</a></p>
 </article>
