--- a/src/components/code/algorithm/al-theory/pages/elem-sort.html
+++ b/src/components/code/algorithm/al-theory/pages/elem-sort.html
@@ -186,25 +186,24 @@ function cocktailSort(arr) {
   <h3>5. Сортировка выбором (Selection sort)</h3>
   <p>Сортировка выбором начинается с поиска наименьшего элемента в списке и обмена его с первым элементом (таким образом, наименьший элемент помещается в окончательную позицию в отсортированном массиве). Затем мы сканируем массив, начиная со второго элемента, в поисках наименьшего среди оставшихся n-1 элементов и обмениваем найденный наименьший элемент со вторым, т.е. помещаем второй наименьший элемент в окончательную позицию в отсортированном массиве. В общем случае, при i-ом проходе по списку (0 &lt;= i &lt;= n-2) алгоритм ищет наименьший элемент среди последних n-i элементов и обменивает его с A[ i ]. После выполнения n-1 проходов список оказывается отсортирован.</p>
   <p>После каждой итерации необходимо проверять на один элемент меньше, пока не будет отсортирован весь массив или список.</p>
-<pre>function selectionSort(inputArr) { 
-  let n = inputArr.length;
-      
-  for(let i = 0; i &lt; n; i++) {
-      // Находим наименьшее число в правой части массива
-      let min = i;
-      for(let j = i; j &lt; n; j++) {
-          if(inputArr[j] &lt; inputArr[min]) {
-              min=j; 
-          }
-       }
-       if (min != i) {
-           // Заменяем элементы
-           let tmp = inputArr[i]; 
-           inputArr[i] = inputArr[min];
-           inputArr[min] = tmp;      
+<pre>function selectionSort(arr) { 
+  for(let i = 0; i &lt; arr.length - 1; i++) {
+    // Пусть в начальном индексе наименьшее число
+    let min = i;
+    // Сравним его со всеми числами справа и найдем наименьшее
+    for(let j = i + 1; j &lt; arr.length; j++) {
+      if(arr[j] &lt; arr[min]) {
+        min = j; 
       }
+    }
+    if (min !== i) {
+      // Заменяем элементы
+      let tmp = arr[i]; 
+      arr[i] = arr[min];
+      arr[min] = tmp;      
+    }
   }
-  return inputArr;
+  return arr;
 }</pre>
 </article>
 
