--- a/src/components/code/algorithm/al-theory/pages/elem-ya-contest2024.html
+++ b/src/components/code/algorithm/al-theory/pages/elem-ya-contest2024.html
@@ -292,7 +292,7 @@ module.exports = { AssemblyLineScheduler };</pre>
 }</pre>
       </li>
       <li>
-        <p>У меня программа не отрабатывала как надо. Первая линия забирала себе первую задачу, после завершения забирала следующую, и так весь массив задач делала толко одна линия. Я наше статью на хабре и воспользовался ей, чтобы все линии могли забрать себе по одной задаче, а потом уже добавлять новые асинхронно.</p>
+        <p>У меня программа не отрабатывала как надо. Первая линия забирала себе первую задачу, после завершения забирала следующую, и так весь массив задач делала только одна линия. Я наше статью на хабре и воспользовался ей, чтобы все линии могли забрать себе по одной задаче, а потом уже добавлять новые асинхронно.</p>
         <h4>1. Не дожидаться результата выполнения</h4>
         <p>Мы можем определить анонимную функцию как асинхронную:</p>
 <pre>async function processArray(array) {
@@ -306,7 +306,7 @@ module.exports = { AssemblyLineScheduler };</pre>
       <li>
         <p>Мы должны сделать метод start() асинхронный (async), чтобы запустить функцию runJobs() и подождать (await) ее выполнения. Она выполнится когда выполнятся все промисы в массиве, переданном в метод Promise.allSettled. При этом промис перейдет из состояния pending в состояние fulfilled.</p>
       </li>
-      <li>После того как отработают все задачи из массива задач, метод старт перейдет к строчке
+      <li>После того как отработают все задачи из массива задач, метод start() перейдет к строчке
         <code>return this.lines;</code>
         <p>И вернет массив со статистикой использования каждой линии</p>
       </li>
