--- a/src/components/code/algorithm/js-coderun/pages/elem-contest-01.html
+++ b/src/components/code/algorithm/js-coderun/pages/elem-contest-01.html
@@ -3,13 +3,21 @@
 
 <!-- Ссылки -->
 <article class="article">
+
   <h2>Ссылки</h2>
   <p><a href="https://contest.yandex.ru/">contest.yandex.ru</a></p>
   <p><a href="https://yandex.ru/support2/contest/ru/examples-stdin-stdout">Чтение и запись в stdin или stdout</a></p>
-  <p><a href="https://github.com/chrisryana/yandex_algorithm">Задачи Яндекс.Контест</a></p>
   <p><a href="https://habr.com/ru/companies/yandex/articles/430560/">Фронтенд, алгоритмы и опоссум Фридрих. Разбираем задачи конкурса Яндекса</a></p>
+  
+  <h2>Github</h2>
+  <p><a href="https://github.com/chrisryana/yandex_algorithm">Задачи Яндекс.Контест</a></p>
+  <p><a href="https://github.com/dtr200/yandex-internship">Задачи из Яндекс.Контест для Яндекс Стажировки</a></p>
   <p><a href="https://github.com/feeedback/yandex-interview-contest">Яндекс.Контест. Подготовка к собеседованию</a></p>
   <p><a href="https://github.com/GH-TIMe/Yandex.Interview">Подготовка к очному собеседованию в Яндекс Дзене по направлению "Стажёр во frontend разработку"</a></p>
+  <p><a href="https://github.com/LenaVladi/node.js-sample">Задачи с Яндекс.Контент</a></p>
+  <p><a href="https://github.com/NancyT33333/js_interview">intervew js tasks</a></p>
+  <p><a href="https://github.com/sapomaro/yandex-algorithm-training-3b-js">Прохождение Тренировок по алгоритмам 3.0</a></p>
+  <p><a href="https://github.com/sapomaro/yandex-algorithm-training-5-js">Прохождение Тренировок по алгоритмам 5.0</a></p>
 </article>
 
 
