--- a/src/components/front/front-node/pages/elem-node-webpack.html
+++ b/src/components/front/front-node/pages/elem-node-webpack.html
@@ -1,27 +1,20 @@
 <h1>Webpack</h1>
 
-<!-- Заголовок -->
-<div class="article">
-  <div class="anchor" id="content"></div>
-  <h2>Содержание</h2>
-</div>
 
 <!-- Содержание -->
-<div class="article article__content">
+<article class="article">
+  <h2>Содержание</h2>
 
-  <div>
-    <p><a href="#about">about</a></p>
-    <p><a href="#links">links</a></p>
-    <p><a href="#install">install</a></p>
-    <p><a href="#entry">entry</a></p>
-    <p><a href="#output">output</a></p>
-    <p><a href="#loaders">Loaders (загрузчики)</a></p>
-    <p><a href="#rules">rules</a></p>
-    <p><a href="#plugins">plugins</a></p>
-    <p><a href="#config">webpack.config.js</a></p>
-  </div>
-
-</div>
+  <p><a href="#about">about</a></p>
+  <p><a href="#links">links</a></p>
+  <p><a href="#install">install</a></p>
+  <p><a href="#entry">entry</a></p>
+  <p><a href="#output">output</a></p>
+  <p><a href="#loaders">Loaders (загрузчики)</a></p>
+  <p><a href="#rules">rules</a></p>
+  <p><a href="#plugins">plugins</a></p>
+  <p><a href="#config">webpack.config.js</a></p>
+</article>
 
 
 <!-- about -->
@@ -44,6 +37,7 @@
   <code>module.exports = {};</code>
   <p>Основные свойства объекта module.exports это entry, output, module, plugins, mode, cache, watch, watchOptions</p>
   <p>Webpack это упаковщик модулей (отдельных частей программы) в единую систему. Изначально применялся для сборки JS, но в настоящее время применяется для сборки любых ресурсов HTML, CSS, шрифтов, изображений. Loader(обработчик) - преобразовывает определенный тип файла в JS модуль. Loader это js function которая принимает исходный код и возвращает обработанный код. Plugins (плагины) позволяют делать все то, что не позволяют делать loaders. Compiler сборщик. Compilartion объект сборки.</p>
+</article>
 
 
 <!-- links -->
